--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Install Surge
         run: npm install -g surge
       - name: Run surge
-        run: surge ./build queen-runs.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./build https://queen-runs.surge.sh --token ${{ secrets.SURGE_TOKEN }}
